Обновление проекта "Тонущий мир": добавлены новые кнопки для создания мира, государства и провинции, изменены настройки отображения, обновлены метаданные для городов и провинций, удалены устаревшие файлы.

--- a/Локации/Города/Барраир.md
+++ b/Локации/Города/Барраир.md
@@ -1,5 +1,6 @@
 ---
 created: 2025-08-07
+project: Тонущий_мир
 name: Барраир
 aliases:
   - Барраир
@@ -8,8 +9,9 @@ climate: Умеренный
 tags:
   - place
   - city
+  - город
 faction: Другое
-province: Велюградия
+province: 
 ---
 
 # Барраир
