--- a/Локации/Города/Велюмарк.md
+++ b/Локации/Города/Велюмарк.md
@@ -10,7 +10,7 @@ tags:
   - локация
   - активный
 project: Тонущий_мир
-country: Гардарский_Союз
+state: Гардарский_Союз
 climate: Умеренный
 dominantFaction: Сенат
 status: действует
