--- a/Локации/Города/Любенбург.md
+++ b/Локации/Города/Любенбург.md
@@ -1,5 +1,6 @@
 ---
 created: 2025-08-04
+project: Тонущий_мир
 name: Любенбург
 aliases:
   - Любенбург
@@ -7,15 +8,19 @@ type: Город
 climate: Умеренный
 tags:
   - place
+  - город
+  - столица
 faction: Город Любенбург
+state: "Галиндия"
+province: ""
+
 ---
 # Любенбург
 
 **Тип:** Город  
 **Климат:** Умеренный  
 **Фракция:** [[Галиндия]]  
-**Провинция**: [[Галиндия]]
-**Государство**: [[Гарданский Союз]]  
+**Государство**: [[Галиндия]]
 
 ## Описание
 Главный порт галиндов
