--- a/Локации/Города/Преслав.md
+++ b/Локации/Города/Преслав.md
@@ -3,9 +3,9 @@ created: "2025-08-21"
 name: "Преслав"
 aliases: ["Преслав"]
 type: "Город"
-tags: [place, город]
+tags: [place, город, столица]
 project: "Тонущий_мир"
-country: "Королевство_Краковей"
+state: "Королевство_Краковей"
 
 climate: "Умеренный"
 dominantFaction: "Королевская власть"
