--- a/Локации/Города/Рюэн.md
+++ b/Локации/Города/Рюэн.md
@@ -1,5 +1,6 @@
 ---
 created: 2025-07-31
+project: Тонущий_мир
 name: Рюэн
 type: Город
 climate: Умеренный
@@ -7,7 +8,7 @@ tags:
   - place
   - город
 faction: Город Рюэн
-country: Гардарский_Союз
+state: Гардарский_Союз
 province: Велюградия
 ---
 
