--- a/Локации/Государства/Галиндия.md
+++ b/Локации/Государства/Галиндия.md
@@ -1,8 +1,11 @@
 ---
 created: "2025-08-04"
 name: "Галиндия"
+project: Тонущий_мир
 aliases: ["Галиндия"]
-type: "Монархия"
+type: "Государство"
+governmentType: "Конституционная монархия"
+
 capital: "Любенбург"
 population: "800,000"
 tags: [state, country, monarchy, maritime]
@@ -13,6 +16,13 @@ tags: [state, country, monarchy, maritime]
 **Тип:** Монархия  
 **Столица:** [[Любенбург]]  
 **Население:** 800,000  
+
+```dataview
+LIST FROM ""
+WHERE tags AND contains(tags, "столица") 
+AND state = this.file.name
+AND file.name != this.file.name
+```
 
 ## Описание
 Галиндия — морское королевство галиндов, расположенное на восточном берегу Зелёного моря. Это торговое государство с богатыми морскими традициями, известное своими мореплавателями, торговцами и портами. В последнее время переживает кризис из-за экономических проблем и возрождения пиратства.
@@ -241,15 +251,19 @@ WHERE (
 ## Автоматические связи  
 ### Провинции и регионы  
 ```dataview  
-LIST FROM #place  
-WHERE (  
-    contains(file.outlinks, [[Галиндия]]) OR  
-    contains(file.tags, "Галиндия") OR  
-    regexmatch(file.text, "#Галиндия") OR  
-    regexmatch(file.text, "\\[\\[Галиндия(\\||\\]\\])")  
-) AND file.name != this.file.name  
+LIST FROM ""
+WHERE type AND contains(type, "Провинция") 
+AND state = this.file.name
+AND file.name != this.file.name
 ```  
 
+### Города государства
+```dataview
+LIST FROM ""
+WHERE tags AND contains(tags, "город") 
+AND state = this.file.name
+AND file.name != this.file.name
+```
 ### Народы государства  
 ```dataview  
 LIST FROM #people OR #character  
