--- a/Локации/Государства/Гардарский_Союз.md
+++ b/Локации/Государства/Гардарский_Союз.md
@@ -1,11 +1,14 @@
 ---
 created: "2025-08-04"
+project: Тонущий_мир
 name: "Гардарский Союз"
-aliases: ["Гардарский Союз", "Гардания"]
-type: "Республика"
+aliases: ["Гардарский Союз", "Гардария"]
+type: "Государство"
+governmentType: "Республика"
+
 capital: "Гарды"
 population: "3,200,000"
-tags: [state, country, republic, federation]
+tags: [state, государство, republic, federation]
 ---
 
 # Гардарский Союз
@@ -14,25 +17,18 @@ tags: [state, country, republic, federation]
 **Столица:** [[Гарды]]  
 **Население:** 3,200,000  
 
+## Столица
+```dataview
+LIST FROM ""
+WHERE tags AND contains(tags, "столица") 
+AND state = this.file.name
+AND file.name != this.file.name
+```
 ## Описание
 Гардарский Союз — федеративная республика, объединяющая несколько провинций под единым правительством. Власть принадлежит Совету Старейшин, который выбирает Посадника (аналог канцлера). Демократия существует только на уровне веча — собрания свободных граждан, где решения принимаются криком и авторитетом. Такая система порождает постоянные интриги, борьбу за влияние и нестабильность.
 
 ## История
-### Образование
-- **Основание:** Образован как союз независимых городов-государств после свержения кана-узурпатора Аэрина и его группировки страна оказалась на распутье. Старейшины основных городов, потомки воинов Астерия, собрались, чтобы решить судьбу королевства. Однако, несмотря на все усилия, они не смогли прийти к согласию о выборе нового кана. Разногласия и конфликты интересов между различными городами и кланами сделали невозможным единогласное решение.
-
-В этой сложной ситуации старейшины и главы городов решили, что единственным выходом будет создание республики. Вдохновлённые древними легендами о союзе свободных городов, которые когда-то процветали на далеких землях, они приступили к формированию новой системы управления. Вместо монархии, где власть сосредоточена в руках одного правителя, они создали систему, в которой власть распределялась среди представителей различных городов и кланов.
-- **Федерация:** Постепенное объединение провинций в единое государство, не всегда мирно.
-- **Совет Старейшин:** Высший орган власти, состоящий из представителей старейших родов и городов
-- **Посадник:** Избирается Советом Старейшин, обладает исполнительной властью, но зависит от поддержки совета
-- **Вече:** Народное собрание в городах и провинциях, где свободные граждане могут влиять на решения
-- Дата образования Республики - основа местного календаря. Сейчас идет 1489 год
-
-### Современный период
-- **Затопление:** Постепенное затопление прибрежных территорий. Затоплена почти половина провинции Велюградия
-- **Внутренние конфликты:** Разногласия между провинциями по поводу ресурсов, борьба за влияние в Совете Старейшин
-- **Внешние угрозы:** Напряжённость с Краковеем и пиратство Любенбурга
-
+![[Гардарский_Союз_история]]
 ## География
 - **Территория:** Центральная часть континента, включая провинции
 - **Границы:** 
@@ -62,8 +58,8 @@ tags: [state, country, republic, federation]
 - **Судебная система:** Местные суды, высший суд при Совете Старейшин
 
 ## География
-- Велюградия - основная провинция, пострадавшая от затопления.
-- Ютаборг: Морнград - крупнейший порт после затопления
+- [[Велюградия]] - основная провинция, пострадавшая от затопления.
+- [[Мои Проекты/Тонущий_мир/Локации/Провинции/Ютаборг|Ютаборг]]: Морнград - крупнейший порт после затопления
 ## Экономика
 - **Основные отрасли:** Сельское хозяйство, торговля, ремёсла
 - **Валюта:** Гардарский гульден
@@ -98,16 +94,26 @@ tags: [state, country, republic, federation]
 ## Автоматические связи
 ### Провинции и регионы
 ```dataview
-LIST FROM #place
-WHERE (
-    contains(file.outlinks, [[Гардарский_Союз]]) OR
-    contains(file.tags, "Гардарский_Союз") OR
-    regexmatch(file.text, "#Гардарский_Союз") OR
-    regexmatch(file.text, "\\[\\[Гардарский_Союз(\\||\\]\\])")
-) AND file.name != this.file.name
+
+LIST FROM ""
+WHERE tags AND contains(tags, "провинция") 
+AND state = this.file.name
+AND file.name != this.file.name
+```
+### Города
+
+```dataview
+LIST FROM ""
+WHERE tags AND contains(tags, "город") 
+AND state = this.file.name
+AND file.name != this.file.name
 ```
 
+
+
+
 ### Народы государства
+
 ```dataview
 LIST FROM #people OR #character
 WHERE (
@@ -240,13 +246,24 @@ AND file.name != this.file.name
 ```
 ### Города
 ```dataview
-LIST FROM #place
-WHERE tags 
-AND contains(tags, "город") 
-AND country = "Гардарский_Союз" 
+LIST FROM ""
+WHERE tags AND contains(tags, "город") 
+AND state = this.file.name
 AND file.name != this.file.name
 ```
 ==========
+
+```dataview
+LIST FROM ""
+WHERE tags AND contains(tags, "город") 
+AND state = "Гардарский_Союз"
+AND file.name != this.file.name
+```
+
+
+
+
+
 ### Народы государства
 ```dataview
 LIST FROM #people OR #character
