--- a/Локации/Государства/Королевство_Аэрон.md
+++ b/Локации/Государства/Королевство_Аэрон.md
@@ -1,16 +1,31 @@
 ---
-created: "2025-08-26"
+created: "2025-09-01"
+project: Тонущий_мир
 name: "Королевство Аэрон"
 aliases: ["Королевство Аэрон"]
 type: "Государство"
-tags: [place, государство, локация, активный]
-capital: "Гарды"
+tags: [place,state, государство, локация, активный]
+capital: "Барраир"
 governmentType: "Монархия"
-leader: "Клавур Аэрин"
-population: "1 800 000"
-languages: ["Иценский", "Месский"]
-climate: "Не указано"
-currency: "Цин"
+leader: "Ольмер 1"
+population: "50000"
+languages: ["Местар", "иценский"]
+climate: "Умеренный"
+currency: "крона"
+history:
+  - year: -146
+    event: "Захват Ольмером Аэрином Барраира, основание государства Аэрон"
+  - year: -67
+    event: "Переименование Барраира в Аэрон"
+  - year: -37
+    event: "Падение Аэрона"
+population_history:
+  - year: -146
+    value: 50000
+  - year: -67
+    value: 80000
+  - year: -37
+    value: 70000
 ---
 
 ![[Мои Проекты/Тонущий_мир/Теговые_картинки/Государство.webp]]
@@ -18,51 +33,70 @@ currency: "Цин"
 # Королевство Аэрон
 
 ## Основная информация
-- **Столица:** Гарды
+- **Столица:** Барраир
 - **Тип правительства:** Монархия
-- **Лидер:** Клавур Аэрин
-- **Численность населения:** 1 800 000
-- **Официальные языки:** Иценский, Месский
-- **Валюта:** Цин
-- **Климат:** Не указано
+- **Лидер:** Ольмер 1
+- **Численность населения:** 50000
+- **Официальные языки:** Местар, иценский
+- **Валюта:** крона
+- **Климат:** Умеренный
+
+## Хронология
+- -146: Захват Ольмером Аэрином Барраира, основание госуддарства Аэрон
+- -67: Переименование Барраира в Аэрон
+- -37: Падение Аэрона
+
+
+## Динамика населения
+- -146: 50000
+- -67: 80000
+- -37: 70000
 
 ## География
-Не указано
+Центр субконтинента
+К северу и западу - Тёмный лес
+Юг - Лунные горы
+Недалеко от истока реки Веруна
 
 ## Ресурсы
-Лунные горы, поля, частично Тёмный Лес
+железная руда
+медная руда
+река
+лес
+
 
 ## История
-Территория иценов
-Захват Барраира и основание Аэрона 421 год до республики
-Династия Пиктаров. (пиктоны)
-- Ваэгрин 1 Пиктар 421 год до Э.Р. - 400 до Э.Р.
-Свержение Пиктаров 146 год до Э.Р.
-Династия Аэринов. 
-- Ольмер 1 Аэрин 146 год до Э.Р.
-- Великая война с гномами. Переименование Барраира в Аэрон 67 год до Э.Р.
-Падение Аэрона 37 год до Э.Р. под ударом вилтов и их союзников пиктонов
+[object Object],[object Object],[object Object]
 
-После свержения Пиктаров, Герцогство Пиктонар (народ пиктоны) вело партизанскую войну с узурпаторами вплоть до основания Республики.
 ## Культура
-- **Традиции:** Три сословия: Воины, Книжники, Труженики
-- **Религия:** общегардский пантеон, но без Савитара (принесённого вилтами) При династии Аэринов большой роли в городах не играет, хотя в сельской местности - основа образования и медицины.
-- **Праздники:** Колесо года
+- **Традиции:** Не указано
+- **Религия:** Гардарианский пантеон
+- **Праздники:** праздники Колеса
 
 ## Экономика
-- **Основные отрасли:** Сельское хозяйство, добыча руды, охота
-- **Торговые партнеры:** Ицены, Унеты, контрабанда с пиктонами и аулерками
-- **Экономические вызовы:** Не указано
+- **Основные отрасли:** Добыча руды,Заготовка леса,Речная торговля
+- **Торговые партнеры:** Соседи
+- **Экономические вызовы:** Зависимость от импорта зерна
 
 ## Политика
-- **Внутренняя политика:** Феодализм
-- **Внешняя политика:** Завоевательная, постепенное подчинение соседей, вялая война с Пиктонаром
-- **Военные силы:** 18000 (10000 пехота, 5 кавалерия, 3 вспомогательные)
+- **Внутренняя политика:** Диктатура
+- **Внешняя политика:** Экспансионизм. 
+Партизанская война с Пиктонаром. 
+Завоевание вирдонов, унетов.
+- **Военные силы:** 2000
+
+## Структура власти
+- **Верховная власть:** [[Структура_власти#Верховная власть|Сенат]]
+- **Исполнительная власть:** [[Структура_власти#Высшая исполнительная власть|Верховный Жупан и Великий Воевода]]
+- **Судебная власть:** [[Структура_власти#Судебная власть|Верховный Суд]]
+- **Административная структура:** [[Структура_власти#Аппарат управления|Курия Магов]]
+- **Провинциальное управление:** [[Структура_власти#Провинциальная власть|Резиденты-Посадники]]
+- **Местное самоуправление:** [[Структура_власти#Местная власть|Волостители и Старшины]]
 
 ## Общество
-- **Образование:** В городах домашнее, в провинции ещё и храмовое
-- **Здравоохранение:** Знахари, Бахари
-- **Социальные проблемы:** конфликты между сословиями
+- **Образование:** Не указано
+- **Здравоохранение:** Не указано
+- **Социальные проблемы:** Бедность и богатство
 - **Заметки для развития:** Не указано
 
 ## Задачи государства (TODO)
@@ -94,133 +128,3 @@ WHERE type = "Город" AND (country = this.name OR state = this.name) AND fil
 LIST FROM ""
 WHERE tags AND contains(tags, "фортификация") AND (country = this.name OR state = this.name) AND file.name != this.file.name
 ``` 
-
-# Королевство Аэрон
-
-Королевство Аэрон — историческое государство, просуществовавшее с 421 по 37 год до Эпохи Республики. Его столицей служил город [[Гарды]], построенный на руинах древнего Барраира. Королевство пало под натиском вилтов и пиктонов, уступив место Гардарскому Союзу, но его наследие продолжает влиять на культуру и политику региона.
-
-## Основная информация
-
-**Тип:** историческое государство (статус: уничтожено)  
-**Столица:** [[Гарды]]  
-**Тип правления:** монархия  
-**Последний правитель:** [[Клавур Аэрин]]  
-**Численность населения:** 1 800 000 (на момент падения)  
-**Официальные языки:** [[Иценский_язык]], [[Месский_язык]]  
-**Валюта:** [[Цин]]  
-
-Королевство Аэрон прекратило своё существование в 37 году до Эпохи Республики, но в некоторых архивных документах его продолжают называть "активным" — этот момент требует уточнения у историков. На улицах современных городов Гардарского Союза до сих пор можно услышать старинные аэронские поговорки, а в сельской местности сохранились обряды, восходящие к временам трёх сословий.
-
-## История и этапы развития
-
-### Зарождение государства
-В 421 году до Эпохи Республики ицены захватили древний город Барраир, положив начало Королевству Аэрон. Первую династию, Пиктаров, возглавил [[Ваэгрин 1 Пиктар]], правивший с 421 по 400 год до Э.Р. Пиктоны, этническая группа, стоявшая во главе государства, сумели объединить разрозненные племена под единым знаменем.
-
-> "На камнях Барраира построили новую судьбу. Кровь предков в реках, а имена ветра — в наших именах", — гласит одна из старинных иценских песен, до сих пор поющаяся у костров.
-
-### Свержение Пиктаров
-В 146 году до Э.Р. произошёл переворот, в результате которого к власти пришла [[Династия Аэринов]]. Правление [[Ольмер 1 Аэрин]] ознаменовалось началом новой эпохи, но не принесло покоя: Герцогство Пиктонар, созданное бывшими правителями, вело партизанскую войну против новых властей.
-
-### Великая война и переименование
-В 67 году до Э.Р. Королевство Аэрон вступило в Великую войну с гномами. Эта конфликтная эпоха завершилась переименованием Барраира в Аэрон — символическим отказом от старых связей и утверждением новой идентичности. Победа в войне укрепила позиции династии Аэринов, но не решила внутренние противоречия.
-
-### Падение королевства
-В 37 году до Э.Р. Королевство Аэрон пало под натиском вилтов и их союзников-пиктонов. Последний правитель, Клавур Аэрин, погиб в битве за [[Гарды]], а на руинах королевства образовался [[Гардарский_Союз]]. Этот момент требует уточнения: некоторые летописи упоминают, что часть аэронской знати бежала в [[Тёмный Лес]], создав там подпольные общины.
-
-## География и среда
-
-Королевство располагалось на территории, включающей [[Лунные горы]], обширные поля и частично [[Тёмный Лес]]. На рассвете, когда туман ещё не рассеялся над горными вершинами, в Гардах можно было услышать, как эхо отражает звуки колоколов Сената, отдавая дань древним традициям.
-
-В летние месяцы дороги, ведущие из столицы к сельским поселениям, пылили так, что даже в полдень казалось, будто город окутан дымом. Запах свежеиспечённого хлеба из глиняных печей перемешивался с ароматом трав, сушеных для зимних зелий знахарями. В портовых районах витал солёный привкус моря, смешанный с запахом смолы и рыбы.
-
-## Структура государства
-
-### Три сословия
-Общество Королевства Аэрон было строго разделено на три сословия:
-- **Воины** — носители силы и защиты государства
-- **Книжники** — хранители знаний и управления
-- **Труженики** — основа экономики и повседневной жизни
-
-Это разделение не было формальным: в малых поселениях границы между сословиями размывались, но в столице и крупных городах нарушение иерархии каралось сурово. На узких улочках Гард можно было определить сословие человека по походке, манере говорить и даже по запаху — воины носили кожаные доспехи, пропахшие конским потом и металлом, книжники — аромат воска и пергамента, труженики — запах земли и свежескошенной травы.
-
-### Административное деление
-Точные границы провинций Королевства Аэрон требуют уточнения. Известно, что в состав государства входил регион [[Аэрин]], населённый народом [[Ицены]], и территории, населённые [[Месы]]. Связь с [[Унеты]] и торговля с ними указывают на наличие западных границ, но их точное расположение не документировано.
-
-## Экономика и ресурсы
-
-### Основные отрасли
-- **Сельское хозяйство** — зерновые культуры и скотоводство в равнинных районах
-- **Добыча руды** — в [[Лунные горы]] велись активные горные работы
-- **Охота** — важный источник продовольствия и ресурсов, включая ценные трофеи
-
-На рынках Гард можно было увидеть крестьян в грубых льняных рубахах, предлагающих корзины с овощами, рядом — кузнецы с блестящим оружием, а в отдельном углу, огороженном верёвкой, торговцы с кожаными мешками, из которых доносился характерный шипящий звук — это были охотники, продающие яд [[Линдвурма]].
-
-### Торговые связи
-Королевство поддерживало торговые отношения с:
-- [[Ицены]] — поставляли сельскохозяйственную продукцию
-- [[Унеты]] — обменивались ремесленными товарами
-- [[Пиктоны]] и [[Аулерки]] — нелегальная контрабанда
-
-В портовом районе Гард, где воздух был густ от запаха солёной рыбы и морской воды, можно было услышать десятки языков. Контрабандисты, прячущие товары в дне лодок, переговаривались на шёпоте, бросая осторожные взгляды на городскую стражу. Монеты [[Цин]] звенели в кошелях купцов, прибывающих из дальних земель.
-
-## Культура и общество
-
-### Религиозные практики
-В Королевстве Аэрон почитали [[общегардский пантеон]], но без бога Савитара, которого принесли позже вилты. В городах религия не играла доминирующей роли, но в сельской местности храмы были центрами образования и медицины. 
-
-Старые знахари в провинциальных деревнях до сих пор используют аэронские обереги, вырезая символы на глиняных табличках. Запах ладана, горящего в маленьких домашних капищах, смешивается с ароматом трав, используемых в лечебных целях. Многие сельские жители до сих пор верят, что духи предков хранят урожай и защищают от напастей.
-
-### Праздники и традиции
-Главным праздником был [[Колесо года]], отмечавший смену сезонов. В день зимнего солнцестояния в Гардах зажигали гигантский костёр на главной площади, вокруг которого танцевали люди в масках предков. Запах горящих трав и специй смешивался с морозным воздухом, а искры от костра, устремляясь в небо, символизировали связь с миром духов.
-
-> "Когда огонь касается звёзд, время начинает новый круг", — шептали старейшины, наблюдая за танцующими фигурами в пламени.
-
-## Связи и зависимости
-
-Королевство Аэрон было тесно связано с несколькими ключевыми сущностями:
-
-- **Географические объекты**: [[Лунные горы]] обеспечивали рудой, [[Тёмный Лес]] — древесиной и дичью
-- **Этнические группы**: [[Ицены]] и [[Месы]] составляли основное население
-- **Политические образования**: [[Герцогство Пиктонар]] было постоянным противником
-- **Экономические связи**: торговля с [[Унеты]], контрабанда с [[Пиктоны]] и [[Аулерки]]
-
-В Гардах до сих пор можно увидеть архитектурные элементы, отсылающие к временам Аэрона — особый способ кладки камня в старых кварталах, узоры на деревянных дверях, напоминающие о трёх сословиях. В портовом районе, где ветер приносит запах соли и моря, местные рыбаки до сих пор используют старинные аэронские узлы для крепления сетей.
-
-## Проблемы и ограничения
-
-### Социальные противоречия
-Основной проблемой Королевства Аэрон были конфликты между сословиями. В больших городах эти противоречия сдерживались силой государства, но в отдалённых регионах часто вспыхивали восстания. Запах гари после таких бунтов висел над деревнями неделями, напоминая о хрупкости социального порядка.
-
-### Политическая нестабильность
-После свержения Пиктаров Герцогство Пиктонар вело партизанскую войну против нового правительства. Эта вялая конфронтация истощала ресурсы королевства и ослабила его перед лицом внешней угрозы. Следы этих столкновений можно найти в старых лесных тропах, где до сих пор встречаются заросшие окопы и следы укреплений.
-
-### Экономические ограничения
-Королевство зависело от импорта некоторых ресурсов, что делало его уязвимым к блокадам. Торговые пути через [[Драконий хребет]] были опасны из-за активности [[Линдвурм]], а контрабандные маршруты с [[Пиктоны]] и [[Аулерки]] не могли полностью компенсировать дефицит.
-
-## Примеры использования в мире
-
-### Археологические находки
-Во время раскопок в районе [[Приречье]] археологи обнаружили старинные монеты [[Цин]] с изображением королей Аэронов. На одной из них, покрытой зеленоватым налётом, всё ещё можно различить профиль [[Клавур Аэрин]] — последнего правителя. Запах земли, смешанный с металлическим привкусом ржавчины, словно переносит исследователей в последние дни королевства.
-
-### Современные отголоски
-В Гардарском Союзе до сих пор используется аэронская система мер и весов. На рынках можно услышать, как торговцы отмеряют товар старинными мерами, а в сельской местности знахари продолжают использовать рецепты, восходящие к временам Аэрона. Запах травяных настоек, приготовленных по древним рецептам, до сих пор встречается в домах провинциальных деревень.
-
-## Справочная секция
-
-### Основные термины
-- **Э.Р.** — Эпоха Республики, отсчёт времени после падения Королевства Аэрон
-- **Цин** — валюта Королевства Аэрон
-- **Три сословия** — основа социальной структуры: Воины, Книжники, Труженики
-
-### Связанные сущности
-- [[Гарды]] — столица Королевства Аэрон
-- [[Династия Аэринов]] — последняя правящая династия
-- [[Падение Аэрона]] — историческое событие 37 года до Э.Р.
-- [[Гардарский_Союз]] — государство, образовавшееся после падения Аэрона
-
-### Требует уточнения
-- Точные границы Королевства Аэрон
-- Подробности экономической системы
-- Причины внутренних конфликтов между сословиями
-- Полная структура управления в провинциях
-- Детали взаимоотношений с [[Унеты]]
