--- a/Локации/Государства/Королевство_Краковей.md
+++ b/Локации/Государства/Королевство_Краковей.md
@@ -1,5 +1,6 @@
 ---
 created: "2025-08-18"
+project: Тонущий_мир
 name: "Королевство Краковей"
 aliases: ["Королевство Краковей"]
 type: "Государство"
