--- a/Локации/Государства/Порусия.md
+++ b/Локации/Государства/Порусия.md
@@ -1,6 +1,7 @@
 ---
 created: "2025-08-19"
 name: "Порусия"
+project: Тонущий_мир
 aliases: ["Порусия"]
 type: "Государство"
 tags: [place, государство]
