--- a/Локации/Локации.md
+++ b/Локации/Локации.md
@@ -1,18 +1,132 @@
-# Локации
+<div class="button-row">
+
+  
+
+```button
+
+class create-button
+
+name ![[создать_мир.jpg|Создать новый мир]]
+
+type command
+
+action Literary Templates: Создать новый мир/проект
+
+```
+
+```button
+
+class create-button
+
+name ![[Создать_государство.jpg|Создать государство]]
+
+type command
+
+action Literary Templates: Создать государство
+
+```
+
+```button
+
+class create-button
+
+name ![[Создать_провинцию.jpg|Создать провинцию]]
+
+type command
+
+action Literary Templates: Создать провинцию
+
+```
+
+```button
+
+class create-button
+
+name ![[создать_город.jpg|Создать город]]
+
+type command
+
+action Literary Templates: Создать город
+
+```
+
+  
+
+</div>
+
+  
+
+<div class="button-row">
+
+  
+
+```button
+
+name ⛏️
+
+color orange
+
+type command
+
+action Literary Templates: Создать шахту
+
+```
+
+```button
+
+name 🏘️
+
+color yellow
+
+type command
+
+action Literary Templates: Создать деревню
+
+```
+
+```button
+
+name 🐮
+
+type command
+
+action Literary Templates: Создать ферму
+
+```
+
+  
+
+</div>
 
 ## Описание
+
+```dataview
+TABLE WITHOUT ID 
+  file.link AS "Государство",
+  capital AS "Столица",
+  population AS "Население",
+  governmentType AS "Правительство"
+FROM ""
+WHERE type = "Государство" 
+  AND contains(file.path, "Тонущий_мир/Локации/Государства")
+  AND file.name != this.file.name
+SORT file.name ASC
+```
+
+
 
 ## Содержимое
 
 ```folder-overview
-folderPath: "Мои Проекты/Тонущий_мир/Локации"
-title: "Локации"
+id: 1f14e664-3f39-4f1d-b23d-869bb4fa9c01
+folderPath: Мои Проекты/Тонущий_мир/Локации
+title: Локации
 showTitle: false
 depth: 1
+style: list
 includeTypes:
   - folder
   - markdown
-style: list
 disableFileTag: false
 sortBy: name
 sortByAsc: true
@@ -28,4 +142,6 @@ hideLinkList: true
 hideFolderOverview: false
 useActualLinks: false
 fmtpIntegration: false
+titleSize: 1
+isInCallout: false
 ```
