--- a/Локации/Провинции/Велюградия.md
+++ b/Локации/Провинции/Велюградия.md
@@ -1,11 +1,13 @@
 ---
 created: 2025-07-31
+project: Тонущий_мир
 name: Велюградия
 type: Провинция
 climate: Умеренный
 tags:
   - place
-state: Гардарский Союз
+  - провинция
+state: Гардарский_Союз
 country: Гардарский_Союз
 ---
 
@@ -34,17 +36,14 @@ WHERE (
 ```
 
 ### Города провинции
-
 ```dataview
-LIST FROM #place OR #location
-WHERE (
-    contains(file.outlinks, [[Велюградия]]) OR
-    contains(file.tags, "Велюградия") OR
-    regexmatch(file.text, "#Велюградия") OR
-    regexmatch(file.text, "\\[\\[Велюградия(\\||\\]\\])")
-    AND (type = "Город" OR type = "Деревня")
-) AND file.name != this.file.name
+LIST FROM ""
+WHERE tags AND contains(tags, "город") 
+AND province = this.file.name
+AND file.name != this.file.name
 ```
+
+
 
 ### Подлокации
 
