--- a/Тонущий_мир.md
+++ b/Тонущий_мир.md
@@ -1,7 +1,9 @@
 ---
 type: проект
-name: "Тонущий мир"
-created: "2025-07-31"
+name: Тонущий мир
+project: Тонущий_мир
+created: 2025-07-31
+cssclasses:
 ---
 ## Управление проектом
 ```folder-overview
@@ -34,11 +36,35 @@ fmtpIntegration: false
 ## Сводка проекта
 - [ ] #важно Храмы!
 
+<div class="button-row">
+
 ```button
-name Создать город
+class create-button
+name ![[создать_мир.jpg|Создать новый мир]]
 type command
-action Literary Templates: выбрать эпоху
+action Literary Templates: Создать новый мир/проект
 ```
+```button
+class create-button
+name ![[Создать_государство.jpg|Создать государство]]
+type command
+action Literary Templates: Создать государство
+```
+```button
+class create-button
+name ![[Создать_провинцию.jpg|Создать провинцию]]
+type command
+action Literary Templates: Создать провинцию
+```
+```button
+class create-button
+name ![[создать_город.jpg|Создать город]]
+type command
+action Literary Templates: Создать город
+```
+
+</div>
+
 ### Локации по статусам
 ```dataview
 TABLE type, status, statusReason
