--- a/Локации/Города/Гарды.md
+++ b/Локации/Города/Гарды.md
@@ -3,9 +3,9 @@ created: "2025-08-26"
 name: "Гарды"
 aliases: ["Гарды"]
 type: "Город"
-tags: [place, город]
+tags: [place, город, столица]
 project: "Тонущий_мир"
-country: "Гардарский_Союз"
+state: "Гардарский_Союз"
 
 climate: "Умеренный"
 dominantFaction: "Сенат"
